--- a/Project 2- Comp 2000/src/CalculatorGUI.fxml
+++ b/Project 2- Comp 2000/src/CalculatorGUI.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="CalculatorController">
    <children>
       <AnchorPane layoutX="-52.0" prefHeight="272.0" prefWidth="1188.0">
          <children>
@@ -28,29 +28,29 @@
                   <RowConstraints maxHeight="55.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="88.0" prefWidth="86.0" text="&lt;" GridPane.columnIndex="1" />
-                  <Button fx:id="quitButton" mnemonicParsing="false" prefHeight="74.0" prefWidth="76.0" text="Q" GridPane.columnIndex="2" />
-                  <Button fx:id="button9" mnemonicParsing="false" prefHeight="68.0" prefWidth="88.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button fx:id="button8" mnemonicParsing="false" prefHeight="68.0" prefWidth="87.0" text="8" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button fx:id="button7" mnemonicParsing="false" prefHeight="68.0" prefWidth="76.0" text="7" GridPane.rowIndex="1" />
-                  <Button fx:id="button4" mnemonicParsing="false" prefHeight="68.0" prefWidth="64.0" text="4" GridPane.rowIndex="2" />
-                  <Button fx:id="button5" mnemonicParsing="false" prefHeight="68.0" prefWidth="108.0" text="5" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button fx:id="button6" mnemonicParsing="false" prefHeight="68.0" prefWidth="94.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <Button fx:id="button1" mnemonicParsing="false" prefHeight="68.0" prefWidth="64.0" text="1" GridPane.rowIndex="3" />
-                  <Button fx:id="button2" mnemonicParsing="false" prefHeight="54.0" prefWidth="100.0" text="2" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Button fx:id="button3" mnemonicParsing="false" prefHeight="54.0" prefWidth="90.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                  <Button fx:id="divideButton" mnemonicParsing="false" prefHeight="68.0" prefWidth="64.0" text="/" GridPane.columnIndex="3" />
-                  <Button fx:id="multiplyButton" mnemonicParsing="false" prefHeight="68.0" prefWidth="64.0" text="*" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                  <Button fx:id="subtractButton" mnemonicParsing="false" prefHeight="68.0" prefWidth="64.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                  <Button fx:id="plusButton" mnemonicParsing="false" prefHeight="68.0" prefWidth="64.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                  <Button id="clearButton" fx:id="clearButton" mnemonicParsing="false" prefHeight="83.0" prefWidth="83.0" text="C" />
-                  <Button fx:id="button0" mnemonicParsing="false" prefHeight="68.0" prefWidth="64.0" text="0" GridPane.rowIndex="4" />
-                  <Button fx:id="openPButton" mnemonicParsing="false" prefHeight="68.0" prefWidth="64.0" text="(" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <Button fx:id="closedPButton" mnemonicParsing="false" prefHeight="68.0" prefWidth="64.0" text=")" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                  <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#delete" prefHeight="88.0" prefWidth="86.0" text="&lt;" GridPane.columnIndex="1" />
+                  <Button fx:id="quitButton" mnemonicParsing="false" onAction="#quit" prefHeight="74.0" prefWidth="76.0" text="Q" GridPane.columnIndex="2" />
+                  <Button fx:id="button9" mnemonicParsing="false" onAction="#nine" prefHeight="68.0" prefWidth="88.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button fx:id="button8" mnemonicParsing="false" onAction="#eight" prefHeight="68.0" prefWidth="87.0" text="8" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="button7" mnemonicParsing="false" onAction="#seven" prefHeight="68.0" prefWidth="76.0" text="7" GridPane.rowIndex="1" />
+                  <Button fx:id="button4" mnemonicParsing="false" onAction="#four" prefHeight="68.0" prefWidth="64.0" text="4" GridPane.rowIndex="2" />
+                  <Button fx:id="button5" mnemonicParsing="false" onAction="#five" prefHeight="68.0" prefWidth="108.0" text="5" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button fx:id="button6" mnemonicParsing="false" onAction="#six" prefHeight="68.0" prefWidth="94.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button fx:id="button1" mnemonicParsing="false" onAction="#one" prefHeight="68.0" prefWidth="64.0" text="1" GridPane.rowIndex="3" />
+                  <Button fx:id="button2" mnemonicParsing="false" onAction="#two" prefHeight="54.0" prefWidth="100.0" text="2" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Button fx:id="button3" mnemonicParsing="false" onAction="#three" prefHeight="54.0" prefWidth="90.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                  <Button fx:id="divideButton" mnemonicParsing="false" onAction="#divide" prefHeight="68.0" prefWidth="64.0" text="/" GridPane.columnIndex="3" />
+                  <Button fx:id="multiplyButton" mnemonicParsing="false" onAction="#multiply" prefHeight="68.0" prefWidth="64.0" text="*" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <Button fx:id="subtractButton" mnemonicParsing="false" onAction="#subtract" prefHeight="68.0" prefWidth="64.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                  <Button fx:id="plusButton" mnemonicParsing="false" onAction="#add" prefHeight="68.0" prefWidth="64.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                  <Button id="clearButton" fx:id="clearButton" mnemonicParsing="false" onAction="#clear" prefHeight="83.0" prefWidth="83.0" text="C" />
+                  <Button fx:id="button0" mnemonicParsing="false" onAction="#zero" prefHeight="68.0" prefWidth="64.0" text="0" GridPane.rowIndex="4" />
+                  <Button fx:id="openPButton" mnemonicParsing="false" onAction="#openParenthesis" prefHeight="68.0" prefWidth="64.0" text="(" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Button fx:id="closedPButton" mnemonicParsing="false" onAction="#closedParenthesis" prefHeight="68.0" prefWidth="64.0" text=")" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                   <Button fx:id="equalsButton" mnemonicParsing="false" prefHeight="68.0" prefWidth="64.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                </children>
             </GridPane>
-            <TextField layoutX="309.0" layoutY="26.0" prefHeight="230.0" prefWidth="864.0" text="34567895678976543256">
+            <TextField fx:id="operationTextField" layoutX="309.0" layoutY="26.0" prefHeight="230.0" prefWidth="864.0" text="Welcome to Calculator">
                <font>
                   <Font size="37.0" />
                </font>
