--- a/Project 2- Comp 2000/src/CalculatorGUI.fxml
+++ b/Project 2- Comp 2000/src/CalculatorGUI.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="CalculatorController">
@@ -47,14 +47,19 @@
                   <Button fx:id="button0" mnemonicParsing="false" onAction="#zero" prefHeight="68.0" prefWidth="64.0" text="0" GridPane.rowIndex="4" />
                   <Button fx:id="openPButton" mnemonicParsing="false" onAction="#openParenthesis" prefHeight="68.0" prefWidth="64.0" text="(" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <Button fx:id="closedPButton" mnemonicParsing="false" onAction="#closedParenthesis" prefHeight="68.0" prefWidth="64.0" text=")" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                  <Button fx:id="equalsButton" mnemonicParsing="false" prefHeight="68.0" prefWidth="64.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                  <Button fx:id="equalsButton" mnemonicParsing="false" onAction="#equals" prefHeight="68.0" prefWidth="64.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                </children>
             </GridPane>
-            <TextField fx:id="operationTextField" layoutX="309.0" layoutY="26.0" prefHeight="230.0" prefWidth="864.0" text="Welcome to Calculator">
+            <Text fx:id="operationText" layoutX="300.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to Calculator" wrappingWidth="887.0000109672546">
                <font>
-                  <Font size="37.0" />
+                  <Font size="64.0" />
                </font>
-            </TextField>
+            </Text>
+            <Text fx:id="errorText" layoutX="300.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="869.13671875">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Text>
          </children>
       </AnchorPane>
    </children>
