--- a/Project 2- Comp 2000/src/CalculatorGUI.fxml
+++ b/Project 2- Comp 2000/src/CalculatorGUI.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="CalculatorController">
+<AnchorPane fx:id="calculatorWindow" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CalculatorController">
    <children>
       <AnchorPane layoutX="-52.0" prefHeight="272.0" prefWidth="1188.0">
          <children>
@@ -47,7 +46,7 @@
                   <Button fx:id="button0" mnemonicParsing="false" onAction="#zero" prefHeight="68.0" prefWidth="64.0" text="0" GridPane.rowIndex="4" />
                   <Button fx:id="openPButton" mnemonicParsing="false" onAction="#openParenthesis" prefHeight="68.0" prefWidth="64.0" text="(" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <Button fx:id="closedPButton" mnemonicParsing="false" onAction="#closedParenthesis" prefHeight="68.0" prefWidth="64.0" text=")" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                  <Button fx:id="equalsButton" mnemonicParsing="false" onAction="#equals" prefHeight="68.0" prefWidth="64.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                  <Button fx:id="equalsButton" mnemonicParsing="false" onAction="#equal" prefHeight="68.0" prefWidth="64.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                </children>
             </GridPane>
             <Text fx:id="operationText" layoutX="300.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to Calculator" wrappingWidth="887.0000109672546">
